[tool.poetry]
name = "202404-dataaug4pen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.18"
torch = "2.0.0"
torchvision = "0.15.1"
hydra = "^2.5"
omegaconf = "^2.3.0"
tqdm = "^4.66.2"
hsitools = {git = "https://github.com/dekkaiinu/hsitools"}
hydra-core = "^1.3.2"
scikit-learn = "1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
