[tool.poetry]
name = "PenID_HSpix"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.8.18"
torch = {version = "^1.8.2+cu111", source = "torch_cu111"}
torchvision = {version = "^0.9.2+cu111", source = "torch_cu111"}
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
tqdm = "^4.66.4"
hsitools = {git = "https://github.com/dekkaiinu/hsitools"}
scikit-learn = "1.0.2"

[[tool.poetry.source]]
name = "torch_cu111"
url = "https://download.pytorch.org/whl/lts/1.8/cu111"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"